[tool.poetry]
name = "sukuna-nguess-bot"
version = "1.0.0"
description = "Telegram anime character guessing game bot"
authors = ["egoist <jayeshpatil8him@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^20.6"
requests = "^2.31.0"
Pillow = "^10.0.0"
aiohttp = "^3.9.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
